apps/nextcloud/gateway.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: nextcloud-gateway
  namespace: nextcloud
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    external-dns.alpha.kubernetes.io/hostname: nextcloud.k8sdev.cloud
spec:
  gatewayClassName: cilium
  listeners:
    - protocol: HTTPS
      port: 443
      name: nextcloud-https
      hostname: nextcloud.k8sdev.cloud
      tls:
        mode: Terminate
        certificateRefs:
          - name: nextcloud-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  parentRefs:
    - name: nextcloud-gateway
      namespace: nextcloud
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nextcloud
          port: 80
  hostnames:
    - nextcloud.k8sdev.cloud
